--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"build": "tsc -b && vite build",
 		"lint": "biome lint --write ./src",
 		"format": "biome format --write ./src",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.14.0",
@@ -24,6 +25,8 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@eslint/js": "^9.25.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.3.0",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
 		"@types/react-slick": "^0.23.13",
@@ -31,9 +34,11 @@
 		"eslint": "^9.25.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.19",
+		"gh-pages": "^6.3.0",
 		"globals": "^16.0.0",
 		"typescript": "~5.8.3",
 		"typescript-eslint": "^8.30.1",
-		"vite": "^6.3.5"
+		"vite": "^6.3.5",
+		"vitest": "^3.1.4"
 	}
 }
