--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@emotion/styled": "^11.14.0",
 		"@mui/icons-material": "^7.1.0",
 		"@mui/material": "^7.1.0",
+		"dayjs": "^1.11.13",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-router": "^7.6.0",
