--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"lint": "biome lint --write ./src",
 		"format": "biome format --write ./src",
 		"preview": "vite preview",
-		"deploy": "gh-pages -d dist"
+		"deploy": "gh-pages -d dist",
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.14.0",
@@ -31,6 +32,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@eslint/js": "^9.25.0",
+		"@testing-library/dom": "^10.4.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.3.0",
 		"@testing-library/user-event": "^14.6.1",
@@ -39,11 +41,13 @@
 		"@types/react-dom": "^19.1.2",
 		"@types/react-slick": "^0.23.13",
 		"@vitejs/plugin-react": "^4.4.1",
+		"@vitest/coverage-v8": "3.1.4",
 		"eslint": "^9.25.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.19",
 		"gh-pages": "^6.3.0",
 		"globals": "^16.0.0",
+		"jsdom": "^26.1.0",
 		"typescript": "~5.8.3",
 		"typescript-eslint": "^8.30.1",
 		"vite": "^6.3.5",
