--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,7 +22,9 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "strictNullChecks": true,
+    "types": ["vitest/globals", "vitest/jsdom"]
   },
   "include": ["src"]
 }
