--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
 		"@mui/icons-material": "^7.1.0",
 		"@mui/material": "^7.1.0",
 		"dayjs": "^1.11.13",
+		"embla-carousel": "^8.6.0",
+		"embla-carousel-autoplay": "^8.6.0",
+		"embla-carousel-react": "^8.6.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-router": "^7.6.0",
