--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
 		"@mui/icons-material": "^7.1.0",
 		"@mui/material": "^7.1.0",
 		"dayjs": "^1.11.13",
+		"embla-carousel": "^8.6.0",
+		"embla-carousel-autoplay": "^8.6.0",
+		"embla-carousel-react": "^8.6.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-router": "^7.6.0",
-		"react-slick": "^0.30.3",
-		"slick-carousel": "^1.8.1"
+		"react-scroll-to-top": "^3.1.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
