--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-router": "^7.6.0",
-		"react-scroll-to-top": "^3.1.0",
-		"react-slick": "^0.30.3",
-		"slick-carousel": "^1.8.1"
+		"react-scroll-to-top": "^3.1.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
