--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-router": "^7.6.0",
-		"react-scroll-to-top": "^3.1.0"
+		"react-scroll-to-top": "^3.1.0",
+		"react-spinners": "^0.17.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
@@ -45,6 +46,7 @@
 		"gh-pages": "^6.3.0",
 		"globals": "^16.0.0",
 		"jsdom": "^26.1.0",
+		"rollup-plugin-visualizer": "^6.0.1",
 		"typescript": "~5.8.3",
 		"vite": "^6.3.5",
 		"vitest": "^3.1.4"
