--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"lint": "biome lint --write ./src",
-		"format": "biome check --write ./src",
+		"format": "biome check --staged - --write ./src/",
 		"preview": "vite preview",
 		"deploy": "gh-pages -d build",
 		"test": "vitest"
