--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"lint": "biome lint --write ./src",
-		"format": "biome check --write ./src",
+		"format": "biome check --staged - --write ./src",
 		"preview": "vite preview",
-		"deploy": "gh-pages -d build",
+		"deploy": "gh-pages -d dist",
 		"test": "vitest"
 	},
 	"dependencies": {
