--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,16 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env
+.env*
 **/utils/coverage
 tmp/
 
 stats.html
 .vite
+*webconfigcontent.ts
+
+
+  ├── .env                 # Shared variables
+  ├── .env.development     # Development-only 
+  ├── .env.test            # Testing-specific
+  └── .env.production      # Production-only
