feat: initialize notification fix: refactor Vite config to use generateWebConfig and improve environment variable handling
Refactor project structure and improve code consistency

- Updated package.json to modify the format script for better linting.
- Enhanced theme configuration in AppProvider to include style overrides for Mui components.
- Refactored MenuButton component to improve accessibility and event handling.
- Cleaned up styles in Buttons and Carousel components for better readability.
- Removed unused styles and consolidated menu item styles in Header.
- Improved RingLoader component by removing commented-out code.
- Fixed formatting issues in Blog and BlogDetails components for consistency.
- Updated blogData to ensure proper formatting and structure.
- Refactored reviewedRoutes to improve code readability.
- Cleaned up various test files and components for better maintainability.
- Ensured consistent formatting across all files, including types and constants.

fix: clean up imports and remove unused comments across multiple components

fix: remove TODO comment regarding menu names for streaming

fix: update styles in index.html, remove unused index.css, and improve lazy loading in Home and StreamDisplay components

fix: update service times and change notifications header to "Announcements"

fix: refactor notification types and update related components to use EventAnnouncement

fix: refactor NotificationCard and related components for improved structure and functionality

fix: refactor NotificationCard and NoteSection components for improved structure and functionality

feat: integrate react-query for donations data fetching and add API URL configuration

Add donation constants for New York United SDA Church

- Introduced constants for donation header, subheader, and descriptive text.
- Defined various donation options including methods for giving during services, by mail, and online.
- Each option includes a detailed description to guide potential do

--- a/.sample.env
+++ b/.sample.env
@@ -2,3 +2,4 @@
 VITE_BASE_URL= # Website base url
 VITE_WEBSITE_TITLE=  # Website name
 VITE_PROD_DOMAIN=  # Hosting domain 
+VITE_API_URL= # Api url
