--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"dev": "vite",
 		"build": "tsc -b && vite build",
 		"lint": "biome lint --write ./src",
-		"format": "biome check --staged - --write ./src",
+		"format": "biome check --write ./src",
 		"preview": "vite preview",
 		"deploy": "gh-pages -d dist",
 		"test": "vitest"
@@ -22,6 +22,8 @@
 		"@emotion/styled": "^11.14.0",
 		"@mui/icons-material": "^7.1.0",
 		"@mui/material": "^7.1.0",
+		"@tanstack/react-query": "^5.80.7",
+		"axios": "^1.9.0",
 		"dayjs": "^1.11.13",
 		"embla-carousel": "^8.6.0",
 		"embla-carousel-autoplay": "^8.6.0",
