--- a/biome.json
+++ b/biome.json
@@ -1,13 +1,13 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+	"$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
 	"vcs": {
 		"enabled": true,
 		"clientKind": "git",
 		"useIgnoreFile": true
 	},
 	"files": {
-		"ignoreUnknown": false,
-		"ignore": []
+		"includes": ["src/**/*.{ts,tsx,js,jsx}"],
+		"ignoreUnknown": false
 	},
 	"formatter": {
 		"enabled": true,
@@ -18,9 +18,6 @@
 		"attributePosition": "auto",
 		"lineEnding": "lf"
 	},
-	"organizeImports": {
-		"enabled": true
-	},
 	"linter": {
 		"enabled": true,
 		"rules": {
@@ -28,11 +25,11 @@
 				"noExcessiveCognitiveComplexity": "error",
 				"useArrowFunction": "error",
 				"useOptionalChain": {
-					"level":  "error",
+					"level": "error",
 					"fix": "safe"
 				},
 				"useFlatMap": {
-					"level":  "error",
+					"level": "error",
 					"fix": "safe"
 				},
 				"noBannedTypes": {
@@ -48,28 +45,26 @@
 				}
 			},
 			"nursery": {
-				"useComponentExportOnlyModules": "error",
-				"noSecrets":"error",
-				 "useGuardForIn": "error"
+				"noSecrets": "error",
+				"noImportCycles": "warn",
+				"noUnresolvedImports": "warn",
+				"noUselessUndefined": "warn",
+				"recommended": true
+			},
+			"suspicious": {
+				"useGuardForIn": "error"
 			},
 			"style": {
-        "noUselessElse": "error",
-				"useFilenamingConvention": "error"
-      },
-			"suspicious": {
-				"noConsoleLog":"error"
+				"noUselessElse": "error",
+				"useFilenamingConvention": "error",
+				"useComponentExportOnlyModules": "error",
+				"noNegationElse": "warn"
 			}
-		},
-		"include": [
-			"**/*.{ts,tsx}"
-		],
-		"ignore": [
-			"dist"
-		]
+		}
 	},
 	"javascript": {
 		"formatter": {
 			"quoteStyle": "double"
 		}
-	}	
+	}
 }
