--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
 	"keywords": [],
 	"author": "Nial Hope",
 	"scripts": {
-		"dev": "vite",
 		"build": "tsc -b && vite build",
-		"lint": "biome lint --write ./src",
-		"format": "biome check --write ./src",
-		"preview": "vite preview",
+		"check": "biome check --apply .",
 		"deploy": "gh-pages -d dist",
+		"dev": "vite",
+		"format": "biome format --write",
+		"lint": "biome lint --write src/",
+		"prebuild": "check",
+		"preview": "vite preview",
 		"test": "vitest"
+	},
+	"engines": {
+		"node": "20.18.0"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.14.0",
@@ -28,29 +33,33 @@
 		"embla-carousel": "^8.6.0",
 		"embla-carousel-autoplay": "^8.6.0",
 		"embla-carousel-react": "^8.6.0",
+		"formik": "^2.4.6",
+		"notistack": "^3.0.2",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-router": "^7.6.0",
 		"react-scroll-to-top": "^3.1.0",
-		"react-spinners": "^0.17.0"
+		"react-spinners": "^0.17.0",
+		"yaml": "^2.8.0",
+		"yup": "^1.6.1"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
+		"@biomejs/biome": "^2.0.2",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.3.0",
 		"@testing-library/user-event": "^14.6.1",
-		"@types/node": "^22.15.21",
+		"@types/node": "^24.0.3",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
 		"@vitejs/plugin-react": "^4.4.1",
-		"@vitest/coverage-v8": "3.1.4",
+		"@vitest/coverage-v8": "^3.2.4",
 		"gh-pages": "^6.3.0",
 		"globals": "^16.0.0",
 		"jsdom": "^26.1.0",
 		"rollup-plugin-visualizer": "^6.0.1",
 		"typescript": "~5.8.3",
 		"vite": "^6.3.5",
-		"vitest": "^3.1.4"
+		"vitest": "^3.2.4"
 	}
 }
