Refactor code structure for improved readability and maintainability

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,10 +26,7 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "strictNullChecks": true,
-    "types": [
-      "vitest/globals",
-      "vitest/jsdom"
-    ]
+    "types": []
   },
   "include": [
     "src"
