--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
 		"lint": "biome lint --write src/",
 		"prebuild": "check",
 		"preview": "vite preview",
-		"test": "vitest"
+		"test": "vitest",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build"
 	},
 	"engines": {
 		"node": "20.18.0"
@@ -45,6 +47,13 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.0.2",
+		"@chromatic-com/storybook": "1",
+		"@storybook/addon-essentials": "8.3.6",
+		"@storybook/addon-links": "8.3.6",
+		"@storybook/react": "8.3.6",
+		"@storybook/react-vite": "8.3.6",
+		"@storybook/test": "^8.6.14",
+		"@storybook/testing-library": "^0.2.2",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.3.0",
@@ -58,6 +67,7 @@
 		"globals": "^16.0.0",
 		"jsdom": "^26.1.0",
 		"rollup-plugin-visualizer": "^6.0.1",
+		"storybook": "8.3.6",
 		"typescript": "~5.8.3",
 		"vite": "^6.3.5",
 		"vitest": "^3.2.4"
