fix: update linter rule to disable file naming convention check and improve code formatting

--- a/biome.json
+++ b/biome.json
@@ -56,7 +56,7 @@
 			},
 			"style": {
 				"noUselessElse": "error",
-				"useFilenamingConvention": "error",
+				"useFilenamingConvention": "off",
 				"useComponentExportOnlyModules": "error",
 				"noNegationElse": "warn"
 			}
