--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 		"preview": "vite preview",
 		"test": "vitest",
 		"storybook": "storybook dev -p 6006",
+		"storybook:clean": "rimraf node_modules/.cache/storybook && storybook dev -p 6006 --no-open",
+		"storybook:fix": "node scripts/fix-storybook.js",
 		"build-storybook": "storybook build",
 		"build-storybook-for-prod": "npm run build-storybook && shx cp -r storybook-static dist/"
 	},
@@ -49,10 +51,10 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.0.2",
-		"@storybook/addon-essentials": "8.3.6",
+		"@storybook/addon-essentials": "^8.6.14",
 		"@storybook/addon-links": "8.3.6",
-		"@storybook/react": "8.3.6",
-		"@storybook/react-vite": "8.3.6",
+		"@storybook/react": "^8.6.14",
+		"@storybook/react-vite": "^8.6.14",
 		"@storybook/test": "^8.6.14",
 		"@storybook/testing-library": "^0.2.2",
 		"@testing-library/dom": "^10.4.0",
@@ -67,6 +69,7 @@
 		"gh-pages": "^6.3.0",
 		"globals": "^16.0.0",
 		"jsdom": "^26.1.0",
+		"rimraf": "^6.0.1",
 		"rollup-plugin-visualizer": "^6.0.1",
 		"shx": "^0.4.0",
 		"storybook": "^8.6.14",
