feat: update package.json with project description and keywords for better visibility

--- a/package.json
+++ b/package.json
@@ -4,9 +4,38 @@
 	"version": "1.0.0",
 	"type": "module",
 	"repository": "https://github.com/nhope123/nyunitedsda.git",
-	"description": "",
+	"description": "New York United Seventh-day Adventist Church - Official website featuring live broadcasts, community services, and spiritual resources",
 	"homepage": "https://nhope123.github.io/nyunitedsda/",
-	"keywords": [],
+	"keywords": [
+		"seventh-day adventist",
+		"sda church",
+		"new york",
+		"ny united sda",
+		"christian church",
+		"adventist community",
+		"sabbath worship",
+		"live broadcast",
+		"church services",
+		"bible study",
+		"christian education",
+		"community outreach",
+		"donations",
+		"prayer",
+		"spiritual growth",
+		"church events",
+		"religious community",
+		"worship services",
+		"christian fellowship",
+		"church website",
+		"faith community",
+		"religious services",
+		"church blog",
+		"ministry",
+		"gospel",
+		"church administration",
+		"religious education",
+		"church announcements"
+	],
 	"author": "Nial Hope",
 	"scripts": {
 		"build": "tsc -b && vite build",
