--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 	"scripts": {
 		"build": "tsc -b && vite build",
 		"build:analyze": "ANALYZE=true tsc -b && vite build",
-		"check": "biome check --apply .",
+		"check": "biome check --write .",
 		"deploy": "gh-pages -d dist",
 		"dev": "vite",
 		"format": "biome format --write",
