--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
 		"rollup-plugin-visualizer": "^6.0.1",
 		"shx": "^0.4.0",
 		"storybook": "^8.6.14",
+		"storybook-addon-mock": "^6.0.1",
 		"typescript": "~5.8.3",
 		"vite": "^6.3.5",
 		"vitest": "^3.2.4"
