Refactor Header and Footer components; implement DesktopMenu for improved navigation
- Updated FooterSegmentSkeleton for consistent styling.
- Removed unused code in FooterServiceTime.
- Changed Header stories to use react-vite.
- Refactored Header component to simplify logic and improve performance.
- Introduced DesktopMenu component for better desktop navigation.
- Added tests and stories for DesktopMenu.
- Updated MenuDrawer to use new ThemeButton component.
- Adjusted styles in Header for better layout.
- Updated various components and stories to use react-vite.
- Cleaned up unnecessary code and improved readability across multiple files.

--- a/package.json
+++ b/package.json
@@ -1,110 +1,108 @@
 {
-	"name": "nyunitedsda",
-	"private": true,
-	"version": "1.0.0",
-	"type": "module",
-	"repository": "https://github.com/nhope123/nyunitedsda.git",
-	"description": "New York United Seventh-day Adventist Church - Official website featuring live broadcasts, community services, and spiritual resources",
-	"homepage": "https://nhope123.github.io/nyunitedsda/",
-	"keywords": [
-		"seventh-day adventist",
-		"sda church",
-		"new york",
-		"ny united sda",
-		"christian church",
-		"adventist community",
-		"sabbath worship",
-		"live broadcast",
-		"church services",
-		"bible study",
-		"christian education",
-		"community outreach",
-		"donations",
-		"prayer",
-		"spiritual growth",
-		"church events",
-		"religious community",
-		"worship services",
-		"christian fellowship",
-		"church website",
-		"faith community",
-		"religious services",
-		"church blog",
-		"ministry",
-		"gospel",
-		"church administration",
-		"religious education",
-		"church announcements"
-	],
-	"author": "Nial Hope",
-	"scripts": {
-		"build": "tsc -b && vite build",
-		"build:analyze": "ANALYZE=true tsc -b && vite build",
-		"check": "biome check --write .",
-		"deploy": "gh-pages -d dist",
-		"dev": "vite",
-		"format": "biome format --write",
-		"generate-types": "bash ./src/utils/fetch-database-types.sh",
-		"lint": "biome lint --write src/",
-		"prebuild": "check",
-		"preview": "vite preview",
-		"test": "vitest",
-		"storybook": "storybook dev -p 6006",
-		"build-storybook": "storybook build",
-		"build-storybook-for-prod": "npm run build-storybook && shx cp -r storybook-static dist/"
-	},
-	"engines": {
-		"node": "20.19.2"
-	},
-	"dependencies": {
-		"@emotion/react": "^11.14.0",
-		"@emotion/styled": "^11.14.0",
-		"@mui/icons-material": "^7.1.0",
-		"@mui/material": "^7.1.0",
-		"@tanstack/react-query": "^5.80.7",
-		"axios": "^1.9.0",
-		"dayjs": "^1.11.13",
-		"embla-carousel": "^8.6.0",
-		"embla-carousel-autoplay": "^8.6.0",
-		"embla-carousel-react": "^8.6.0",
-		"formik": "^2.4.6",
-		"notistack": "^3.0.2",
-		"react": "^19.1.0",
-		"react-dom": "^19.1.0",
-		"react-router": "^7.6.0",
-		"react-scroll-to-top": "^3.1.0",
-		"react-spinners": "^0.17.0",
-		"yaml": "^2.8.0",
-		"yup": "^1.6.1"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "^2.0.2",
-		"@storybook/addon-essentials": "^8.6.14",
-		"@storybook/addon-links": "^8.3.6",
-		"@storybook/react": "^8.6.14",
-		"@storybook/react-vite": "^8.6.14",
-		"@storybook/test": "^8.6.14",
-		"@storybook/testing-library": "^0.2.2",
-		"@testing-library/dom": "^10.4.0",
-		"@testing-library/jest-dom": "^6.6.3",
-		"@testing-library/react": "^16.3.0",
-		"@testing-library/user-event": "^14.6.1",
-		"@types/node": "^24.0.3",
-		"@types/react": "^19.1.2",
-		"@types/react-dom": "^19.1.2",
-		"@vitejs/plugin-react": "^4.4.1",
-		"@vitest/coverage-v8": "^3.2.4",
-		"gh-pages": "^6.3.0",
-		"globals": "^16.0.0",
-		"jsdom": "^26.1.0",
-		"rimraf": "^6.0.1",
-		"rollup-plugin-visualizer": "^6.0.1",
-		"shx": "^0.4.0",
-		"storybook": "^8.6.14",
-		"storybook-addon-mock": "^6.0.1",
-		"typescript": "~5.8.3",
-		"vite": "^6.3.5",
-		"vitest": "^3.2.4"
-	},
-	"packageManager": "yarn@4.9.2+sha512.1fc009bc09d13cfd0e19efa44cbfc2b9cf6ca61482725eb35bbc5e257e093ebf4130db6dfe15d604ff4b79efd8e1e8e99b25fa7d0a6197c9f9826358d4d65c3c"
+  "name": "nyunitedsda",
+  "private": true,
+  "version": "1.0.0",
+  "type": "module",
+  "repository": "https://github.com/nhope123/nyunitedsda.git",
+  "description": "New York United Seventh-day Adventist Church - Official website featuring live broadcasts, community services, and spiritual resources",
+  "homepage": "https://nhope123.github.io/nyunitedsda/",
+  "keywords": [
+    "seventh-day adventist",
+    "sda church",
+    "new york",
+    "ny united sda",
+    "christian church",
+    "adventist community",
+    "sabbath worship",
+    "live broadcast",
+    "church services",
+    "bible study",
+    "christian education",
+    "community outreach",
+    "donations",
+    "prayer",
+    "spiritual growth",
+    "church events",
+    "religious community",
+    "worship services",
+    "christian fellowship",
+    "church website",
+    "faith community",
+    "religious services",
+    "church blog",
+    "ministry",
+    "gospel",
+    "church administration",
+    "religious education",
+    "church announcements"
+  ],
+  "author": "Nial Hope",
+  "scripts": {
+    "build": "tsc -b && vite build",
+    "build:analyze": "ANALYZE=true tsc -b && vite build",
+    "check": "biome check --write .",
+    "deploy": "gh-pages -d dist",
+    "dev": "vite",
+    "format": "biome format --write",
+    "generate-types": "bash ./src/utils/fetch-database-types.sh",
+    "lint": "biome lint --write src/",
+    "prebuild": "check",
+    "preview": "vite preview",
+    "test": "vitest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "build-storybook-for-prod": "npm run build-storybook && shx cp -r storybook-static dist/"
+  },
+  "engines": {
+    "node": "20.19.2"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
+    "@tanstack/react-query": "^5.80.7",
+    "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "formik": "^2.4.6",
+    "notistack": "^3.0.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router": "^7.6.0",
+    "react-scroll-to-top": "^3.1.0",
+    "react-spinners": "^0.17.0",
+    "yaml": "^2.8.0",
+    "yup": "^1.6.1"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^2.0.2",
+    "@storybook/addon-links": "^9.0.18",
+    "@storybook/react-vite": "^9.0.18",
+    "@storybook/testing-library": "^0.2.2",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^24.0.3",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.4.1",
+    "@vitest/coverage-v8": "^3.2.4",
+    "gh-pages": "^6.3.0",
+    "globals": "^16.0.0",
+    "jsdom": "^26.1.0",
+    "rimraf": "^6.0.1",
+    "rollup-plugin-visualizer": "^6.0.1",
+    "shx": "^0.4.0",
+    "storybook": "^9.0.18",
+    "storybook-addon-mock": "^6.0.1",
+    "typescript": "~5.8.3",
+    "vite": "^6.3.5",
+    "vitest": "^3.2.4",
+    "@storybook/addon-docs": "^9.0.18"
+  },
+  "packageManager": "yarn@4.9.2+sha512.1fc009bc09d13cfd0e19efa44cbfc2b9cf6ca61482725eb35bbc5e257e093ebf4130db6dfe15d604ff4b79efd8e1e8e99b25fa7d0a6197c9f9826358d4d65c3c"
 }
