--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.0.2",
+    "@storybook/addon-docs": "^9.0.18",
     "@storybook/addon-links": "^9.0.18",
     "@storybook/react-vite": "^9.0.18",
     "@storybook/testing-library": "^0.2.2",
@@ -94,6 +95,8 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "jsdom": "^26.1.0",
+    "msw": "^2.10.4",
+    "msw-storybook-addon": "^2.0.5",
     "rimraf": "^6.0.1",
     "rollup-plugin-visualizer": "^6.0.1",
     "shx": "^0.4.0",
@@ -101,8 +104,12 @@
     "storybook-addon-mock": "^6.0.1",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
-    "vitest": "^3.2.4",
-    "@storybook/addon-docs": "^9.0.18"
+    "vitest": "^3.2.4"
   },
-  "packageManager": "yarn@4.9.2+sha512.1fc009bc09d13cfd0e19efa44cbfc2b9cf6ca61482725eb35bbc5e257e093ebf4130db6dfe15d604ff4b79efd8e1e8e99b25fa7d0a6197c9f9826358d4d65c3c"
+  "packageManager": "yarn@4.9.2+sha512.1fc009bc09d13cfd0e19efa44cbfc2b9cf6ca61482725eb35bbc5e257e093ebf4130db6dfe15d604ff4b79efd8e1e8e99b25fa7d0a6197c9f9826358d4d65c3c",
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
+  }
 }
