--- a/biome.json
+++ b/biome.json
@@ -6,9 +6,7 @@
 		"useIgnoreFile": true
 	},
 	"files": {
-		"includes": [
-			"src/**/*.{ts,tsx,js,jsx}"
-		],
+		"includes": ["src/**/*.{ts,tsx,js,jsx}"],
 		"ignoreUnknown": false
 	},
 	"formatter": {
@@ -72,9 +70,7 @@
 	},
 	"overrides": [
 		{
-			"includes": [
-				"**/*.stories.tsx"
-			],
+			"includes": ["**/*.stories.tsx"],
 			"linter": {
 				"rules": {
 					"style": {
