feat: Add Storybook stories for RoutedTabs, FormContainer, InputField, and SelectField components
- Created RoutedTabs.stories.tsx with default and link examples.
- Added FormContainer.stories.tsx demonstrating basic usage and cancel functionality.
- Introduced InputField.stories.tsx showcasing various field types including text, select, checkbox, and datetime-local.
- Developed SelectField.stories.tsx with examples for basic usage, no options, duplicate values, long labels, and custom rendering.

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "format": "biome format --write",
     "generate-types": "bash ./src/utils/fetch-database-types.sh",
     "lint": "biome lint --write src/",
-    "prebuild": "check",
+    "prebuild": "npm run check",
     "preview": "vite preview",
     "test": "vitest",
     "storybook": "storybook dev -p 6006",
