--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,9 +26,14 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "strictNullChecks": true,
-    "types": []
+    "types": [],
+    "rootDirs": [
+      ".",
+      "./.react-router/types"
+    ]
   },
   "include": [
-    "src"
-  ]
+    "src",
+    ".react-router/types/**/*"
+  ],
 }
