--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-scroll-to-top": "^3.1.0",
     "react-spinners": "^0.17.0",
     "terser": "^5.43.1",
+    "usehooks-ts": "^3.1.1",
     "yaml": "^2.8.0",
     "yup": "^1.6.1"
   },
@@ -87,7 +88,6 @@
     "@storybook/addon-docs": "^9.0.18",
     "@storybook/addon-links": "^9.0.18",
     "@storybook/react-vite": "^9.0.18",
-    "@storybook/testing-library": "^0.2.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -97,6 +97,7 @@
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "@vitest/coverage-v8": "^3.2.4",
+    "biome": "^0.2.2",
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "jsdom": "^26.1.0",
