bugfix: fix church name error

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "2.5.0",
   "type": "module",
   "repository": "https://github.com/nhope123/nyunitedsda.git",
-  "description": "New York United Seventh-day Adventist Church - Official website featuring live broadcasts, community services, and spiritual resources",
+  "description": "New York United Sabbath Day Adventist Church - Official website featuring live broadcasts, community services, and spiritual resources",
   "homepage": "https://nhope123.github.io/nyunitedsda/",
   "keywords": [
     "seventh-day adventist",
